Cambios realizados en el Proyecto